; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/mac/extr_mac_sysv_msg.c_mac_sysvmsg_create.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/mac/extr_mac_sysv_msg.c_mac_sysvmsg_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucred = type { i32 }
%struct.msqid_kernel = type { i32 }
%struct.msg = type { i32 }

@sysvmsg_create = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mac_sysvmsg_create(%struct.ucred* %0, %struct.msqid_kernel* %1, %struct.msg* %2) #0 {
  %4 = alloca %struct.ucred*, align 8
  %5 = alloca %struct.msqid_kernel*, align 8
  %6 = alloca %struct.msg*, align 8
  store %struct.ucred* %0, %struct.ucred** %4, align 8
  store %struct.msqid_kernel* %1, %struct.msqid_kernel** %5, align 8
  store %struct.msg* %2, %struct.msg** %6, align 8
  %7 = load i32, i32* @sysvmsg_create, align 4
  %8 = load %struct.ucred*, %struct.ucred** %4, align 8
  %9 = load %struct.msqid_kernel*, %struct.msqid_kernel** %5, align 8
  %10 = load %struct.msqid_kernel*, %struct.msqid_kernel** %5, align 8
  %11 = getelementptr inbounds %struct.msqid_kernel, %struct.msqid_kernel* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.msg*, %struct.msg** %6, align 8
  %14 = load %struct.msg*, %struct.msg** %6, align 8
  %15 = getelementptr inbounds %struct.msg, %struct.msg* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @MAC_POLICY_PERFORM_NOSLEEP(i32 %7, %struct.ucred* %8, %struct.msqid_kernel* %9, i32 %12, %struct.msg* %13, i32 %16)
  ret void
}

declare dso_local i32 @MAC_POLICY_PERFORM_NOSLEEP(i32, %struct.ucred*, %struct.msqid_kernel*, i32, %struct.msg*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
